Fix layout issue without bulk form

--- a/styles/base/_table.scss
+++ b/styles/base/_table.scss
@@ -1,5 +1,5 @@
 .gin-table-scroll-wrapper {
-  overflow: auto;
+  overflow-x: auto;
   overscroll-behavior-x: contain;
   -webkit-overflow-scrolling: touch;
   margin-top: calc(var(--gin-spacing-xs) * -1);
@@ -7,7 +7,7 @@
 
 table.gin--sticky-table-header {
   visibility: hidden;
-  z-index: 98;
+  z-index: 97;
   position: sticky;
   top: calc(var(--gin-toolbar-y-offset) + var(--gin-height-sticky) - 1px);
   width: auto !important;
@@ -17,31 +17,6 @@ table.gin--sticky-table-header {
   tr {
     display: block;
     width: max-content;
-  }
-}
-
-.views-form > form:has(> .gin--sticky-table-header),
-.gin-layer-wrapper:has(> .gin--sticky-table-header) {
-  position: relative;
-
-  &::before,
-  &::after {
-    content: '';
-    z-index: 98;
-    position: absolute;
-    top: 0;
-    width: 1.5rem;
-    height: 100%;
-  }
-
-  &::before {
-    left: calc(var(--gin-spacing-l) * -1);
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0), var(--gin-bg-layer));
-  }
-
-  &::after {
-    right: calc(var(--gin-spacing-l) * -1);
-    background: linear-gradient(90deg, var(--gin-bg-layer), rgba(255, 255, 255, 0));
   }
 }
 
