--- a/styles/layout/navigation.scss
+++ b/styles/layout/navigation.scss
@@ -157,10 +157,6 @@ body.gin--navigation {
     }
   }
 
-  .navigation-menu-wrapper.menu--logo {
-    margin-bottom: -5px;
-  }
-
   .menu-item.current > .toolbar-link {
     color: var(--gin-color-primary);
   }
